--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.5",
-    "sequelize-transforms": "^2.0.0"
+    "sequelize-transforms": "^2.0.0",
+    "url": "^0.11.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "connect-livereload": "^0.6.1",
