--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "sync": "nodemon index.js -e pug,js"
+    "sync": "nodemon index.js -e ejs,js"
   },
   "author": "Lester Howard",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "express-session": "^1.17.2",
     "express-validator": "^6.12.1",
     "http-errors": "^1.8.0",
+    "multer": "^1.4.3",
     "nanoid": "^3.1.28",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
