--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "express-session": "^1.17.2",
     "express-validator": "^6.12.1",
     "http-errors": "^1.8.0",
+    "i18n": "^0.13.3",
     "multer": "^1.4.3",
     "nanoid": "^3.1.28",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
+    "passport-remember-me": "^0.0.1",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.5",
