--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "passport-remember-me": "^0.0.1",
+    "passport-remember-me-extended": "^0.0.3",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.5",
