--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "sequelize-transforms": "^2.0.0",
     "slug": "^5.1.0",
     "url": "^0.11.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "livereload": "^0.9.3"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
@@ -46,7 +47,6 @@
     "babel-loader": "^8.2.2",
     "connect-livereload": "^0.6.1",
     "ejs": "^3.1.6",
-    "livereload": "^0.9.3",
     "nodemailer": "^6.6.5",
     "nodemon": "^2.0.13",
     "npm-run-all": "^4.1.5",
